clusters/takeout/apps/games/valheim/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: valheim-server
  namespace: games
spec:
  selector:
    matchLabels:
      app: valheim-server
  serviceName: valheim-server
  replicas: 1 # active nas
  template:
    metadata:
      labels:
        app: valheim-server
    spec:
      containers:
      - name: valheim-server
        image: lloesche/valheim-server
        command: 
          - sh
          - -c
          - |
            apt update && \
            apt install -y \
            git \
            & \
            /usr/local/sbin/bootstrap
        ports:
        - containerPort: 2456
          protocol: UDP
          name: server-one
        - containerPort: 2457
          protocol: UDP
          name: server-two
        - containerPort: 3000
          protocol: TCP
          name: status
        - containerPort: 9001
          protocol: TCP
          name: supervisor
        volumeMounts:
        - name: valheim-config
          mountPath: /config
        - name: valheim-data
          mountPath: /opt/valheim
        - mountPath: "/dev/dri"
          name: dri-pvc
        securityContext:
            privileged: true
        resources:
          requests:
            cpu: 500m
          limits:
            memory: 6Gi
      - name: valheim-files
        image: nginx
        volumeMounts:
        - name: valheim-config
          readOnly: true
          mountPath: /usr/share/nginx/html
        - mountPath: /etc/nginx/conf.d/
          name: valheim-files-config
        resources:
          requests:
            cpu: 50m
          limits:
            memory: 128Mi
        ports:
        - containerPort: 80
      nodeSelector:
        graphics: dri
        # longhorn: primary
      volumes:
        - name: valheim-config
          persistentVolumeClaim:
            claimName: valheim-config-nas
        - name: valheim-data
          persistentVolumeClaim:
            claimName: valheim-data-nas
        - name: dri-pvc
          persistentVolumeClaim:
            claimName: dri-pvc
        - name: valheim-files-config
          configMap:
            name: valheim-files-config
