clusters/takeout/apps/games/valheim/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: valheim-server
  namespace: games
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    acme.cert-manager.io/http01-edit-in-place: "false"
spec:
  tls:
    - hosts:
        - "*.qtosw.com"
        - "*.valheim.qtosw.com"
      secretName: valheim.qtosw.com-tls
  rules:
  - host: valheim.qtosw.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: valheim-server-tcp
            port:
              number: 80
  - host: map.valheim.qtosw.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: valheim-server-tcp
            port:
              number: 3000
  - host: supervisor.valheim.qtosw.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: valheim-server-tcp
            port:
              number: 9001
  - host: files.valheim.qtosw.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: valheim-server-tcp
            port:
              number: 80
